--- a/public/options.html
+++ b/public/options.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Test Extension Options</title>
-  </head>
+    <head>
+        <title>My Test Extension Options</title>
+    </head>
 
-  <body>
-    <label>
-      <input type="text" id="tcbUrl" />
-      TCB base URL
-    </label>
-    <label>
-      <input type="text" id="actualUrl" />
-      Actual Base URL
-    </label>
+    <body>
+        <label>
+            <input type="text" id="tcbUrl" />
+            TCB base URL
+        </label>
+        <label>
+            <input type="text" id="actualUrl" />
+            Actual Base URL
+        </label>
 
-    <label>
-      <input type="password" id="actualPassword" />
-      Actual password
-    </label>
-    <label>
-      <input type="text" id="actualBudgetId" />
-      Actual budget ID
-    </label>
-    <label>
-      <input type="password" id="actualBudgetPassword" />
-      Actual budget password
-    </label>
+        <label>
+            <input type="password" id="actualPassword" />
+            Actual password
+        </label>
+        <label>
+            <input type="text" id="actualBudgetId" />
+            Actual budget ID
+        </label>
+        <label>
+            <input type="password" id="actualBudgetPassword" />
+            Actual budget password
+        </label>
+        <label>
+            <input type="password" id="exchangeRateKey" />
+            Exchange rate API key
+        </label>
 
-    <div id="status"></div>
-    <button id="save">Save</button>
+        <div id="status"></div>
+        <button id="save">Save</button>
 
-    <script src="options.js"></script>
-  </body>
+        <script src="options.js"></script>
+    </body>
 </html>
