always maxdate to tomorrow for autorun

--- a/public/popup.html
+++ b/public/popup.html
@@ -12,7 +12,7 @@
         <button id="auto-run">Sync with API</button>
 
         <div id="lastSyncWrap">
-            <b>Last sync:</b>
+            <b>Last transaction date:</b>
             <i id="lastSync"></i>
         </div>
 
