--- a/public/popup.html
+++ b/public/popup.html
@@ -12,8 +12,13 @@
         <button id="auto-run">Sync with API</button>
 
         <div id="lastSyncWrap">
-            <b>Last transaction date:</b>
+            <b>Last transaction:</b>
             <i id="lastSync"></i>
+        </div>
+
+        <div id="newSyncWrap">
+            <b>Latest transaction:</b>
+            <i id="newSync"></i>
         </div>
 
         <script src="popup.js"></script>
