ability to load options from JSON config file

--- a/public/options.html
+++ b/public/options.html
@@ -13,6 +13,13 @@
     <body class="pure-g" style="padding: 16px" onsubmit="return false;">
         <form class="pure-form pure-form-aligned pure-u-1">
             <fieldset>
+                <h3>JSON config</h3>
+                <div class="pure-control-group">
+                    <label>Load JSON to populate fields</label>
+                    <input type="file" id="file" />
+                </div>
+                <hr style="margin-top: 14px" />
+                <h3>Main config</h3>
                 <div class="pure-control-group">
                     <label> TCB base URL </label>
                     <input type="text" id="tcbUrl" class="pure-input-rounded" required />
